[gd_scene load_steps=4 format=3 uid="uid://2ojpex6irhem"]

[ext_resource type="Script" path="res://scenes/north.gd" id="1_bmt4t"]
[ext_resource type="Texture2D" uid="uid://b1agvacfdv17h" path="res://res/north.png" id="1_p46da"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_246ca"]
size = Vector2(237, 213)

[node name="north" type="Node2D"]
script = ExtResource("1_bmt4t")

[node name="North" type="Sprite2D" parent="."]
position = Vector2(-14, -14)
scale = Vector2(0.511719, 0.644695)
texture = ExtResource("1_p46da")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-20.5, -50.5)
shape = SubResource("RectangleShape2D_246ca")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
